src/test/resources/frontendReference/invalid/semanticErr/class/inheritance/overrideVariable.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 19:2 -- Incompatible type at 't'. Expected type: INT. Actual type: CHAR.